--- a/config/config.json
+++ b/config/config.json
@@ -1,6 +1,6 @@
 {
   "development": {
-    "username": "ergoogbs_dq",
+    "username": "root",
     "password": "Kashap05!",
     "database": "ergoogbs_dq",
     "host": "localhost",
